css/styles.css
body{
  margin: 0;
  padding: 0;
}
h1 {
   text-align: center;
}
ul {
  margin-top: 50px;
}
li {
  list-style: circle;
}
p {
  font-size: 18px;
}

.cuffs-container {
  border: solid 4px #028150;
  width: 80%;
  margin: auto;
  margin-bottom: 15px;
}
.cuffs-container img {
  width: 80%;
  max-width: 400px;
  display: block;
  margin: auto;
}
.content-cuffs-container {
  width: 100%;
  background:radial-gradient(ellipse at center, rgba(191,255,232,1) 0%, rgba(2,129,80,1) 100%);
  padding: 10px;
}
.content-cuffs {
  width: 85%;
  margin: auto;
  font-weight: 500;
}
.content {
  padding: 10px;
  background-color: #99e5ae;
}
.heart-container {
  background: url('../img/heart-bg.jpg');
  background-position: center;
  background-size: cover;
  width: 100%;
  padding: 1em;
}
.heart-content {
  background-color: rgba(255,255,255,0.6);
  border-radius: 10px;
  border: 2px solid black;
  width: 500px;
  margin-left: 40px;
  padding: 10px;
}
.style1-box {
  background-color: #035535;
  -webkit-display: flex;
  -webkit-justify-content: space-between;
}
.style1-box img {
  width: 50%;
}
.style1-box-content {
  width: 40%;
  max-width: 500px;
  height: 100%;
  margin: 50px auto;
  color: white;
  border: solid 2px #99e5ae;
  padding: 10px;
}
.man-cuffs-content {
  margin: 2em;
  margin-top: 50px;
  font-size: 18px;
  font-weight: 500;
}
.man-cuffs img {
  display: block;
  margin: auto;
}
.choices {
  position: relative;
  padding: 1.3em;
  width: 100%;
  height: 100%;
  background: url('../img/green-bg.jpg');
  background-position: center;
  background-size: cover;
  font-size: 18px;
  color: white;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.choices span {
  width: 400px;
}
.choices:before {
  content:"";
  position: absolute;
  left: 80%;
  top: 100%;
  width: 30px;
  height: 30px;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
  border-top: 40px solid #023b25;
}
.plain-white-container {
  width: 100%;
  padding: 1.5em;
}
.plain-white-content {
  width: 85%;
  margin: auto;
  padding: 1.5em;
}
.bar-design-container {
  background: url('../img/bar-design-bg-2.jpg');
  background-position: center;
  background-size: cover;
  padding: 1.2em;
}
.bar-design-content {
  margin: auto;
  width: 95%;
  color: white;
  background-color: #023b25;
  border: solid 2px lightgreen;
  padding: 10px;
}
.style2-box-container {
  background-color: #05432c;
  overflow: auto;
  width: 100%;
}
.style2-box {
  color: white;
  padding: 2em;
  float: left;
}
.praying-man-container {
  width: 100%;
  background-color: black;
  display: flex;
  justify-content: space-between;
}
.praying-man-content {
  max-width: 600px;
  height: 250px;
  padding: 1em;
  margin-right: 3%;
  margin-top: 1.3em;
  background:radial-gradient(ellipse at center, rgba(191,255,232,1) 0%, rgba(2,129,80,1) 100%);
}
.hands-reading {
  padding: 1em;
  background: url('../img/hands-reading.png');
  background-position: center;
  background-size: cover;
  overflow: auto;
  color: white;
}
.main-rounded-container {
  width: 90%;
  margin: auto;
  border-radius: 10px;
  border: solid 5px #028150;
  overflow: auto;
}
.woman-celebrating-1 {
  width: 45%;
}
.woman-yelling {
  display: flex;
  justify-content: space-between;
}
.woman-yelling ul {
  margin: 30px auto;
}
.green {
  background-color: #035535;
  color: #769586;
}
.spoons-container {
  width: 100%;
}
.spoons {
  width: 100%;
  margin-top: -180px;
  display: flex;
  justify-content: center;
}
.spoons img {
  margin-top: 50px;
}
.spoons-content {
  background:radial-gradient(ellipse at center, rgba(191,255,232,1) 0%, rgba(2,129,80,1) 100%);
  padding: 1em;
}
.man-surprised {
  margin-top: 10px;
  padding: 1em;
}
.green-design-bg {
  width: 100%;
  background: url('../img/green-design-2.png');
}
.green-design-content {
  width: 80%;
  padding: 1em;
  margin: auto;
}
.frustrated-man {
  width: 100%;
  height: 600px;
  background: url('../img/frustrated-man.png');
  background-position: center;
  background-size: cover;
}
.frustrated-man-content {
  width: 50%;
  padding: 1em;
  background-color: rgba(255, 255, 255, .6);
  float: right;
  margin-top:40px;
  margin-right: 30px;
}
.girl-thinking-container {
  background: url('../img/girl-thinking.jpg');
  border-radius: 10px;
  border: solid 4px #028150;
  background-position: top;
  background-size: cover;
  width: 100%;
  height: 600px;
  padding: 15px;
}
.girl-thinking {
  display: flex;
  justify-content: space-between;
}
.infinite {
  width: 100%;
}
.green-bg-3 {
  width: 100%;
  height: 200px;
  background-image: url('../img/green-bg-3.jpg');
  padding: .5em;
  margin-top: 20px;
  margin-bottom: 20px;
}
.green-bg-3 p {
  z-index: 3;
  color: white;
}
.green-bg-2 {
  width: 100%;
  background: url('../img/green-bg-2.jpg');
  color: white;
}
.boss-man-container {
  width: auto;
  display: flex;
  justify-content: space-between;
}
.boss-man-container img{
  width: 250px;
  height: 250px;
}
.boss-man-content {
  width: 60%;
  max-width: 700px;
  border-radius: 10px;
  height: 200px;
  padding: 1em;
  margin: 10px auto;
  background-color: #e3e9e4;
}
.choices-container {
  /*position: relative;*/
}
.text img {
  display: block;
  width: 80%;
  max-width: 500px;
  margin: auto;
}
/*#bar-design {
  position: relative;
  top: 0;
  opacity: .4;
  width: 100%;
}*/
#ithappened {
  width: 100%;
  background-color: #0dbf7a;
  padding: 10px;
  position: relative;
}
#ithappened:before {
  content:"";
  position: absolute;
  right: 80%;
  top: 100%;
  width: 30px;
  height: 30px;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
  border-top: 40px solid #0dbf7a;
}
#cuffs {
  margin: auto;
  width: 100%;
  display: block;
}
#paul {
  display: block;
  font-size: 20px;
  margin: 20px;
  margin-left: 200px;
}
#couple {
  float: right;
}
#choiceA {
  width: 80%;
  height: 200px;
  border-radius: 20px;
  border: solid 3px #329c73;
  margin: auto;
  display: flex;
  justify-content: center;
  box-shadow: 7px 5px 20px 0px black;
  background: url('../img/driving.jpg');
  background-position: center;
  background-size: cover;
}
#choiceB {
  width: 80%;
  height: 200px;
  border-radius: 20px;
  border: solid 3px #329c73;
  margin: auto;
  box-shadow: 7px 5px 20px 0px black;
  background: url('../img/depressed-man-3.png');
  background-position: center;
  background-size: cover;
}
#crying-woman {
  margin-top: -2em;
  margin-right: -2em;
  float: right;
  width: 400px;
}
#praying-man {
  width: 40%;
  max-width: 800px;
  height: 300px;
  background: url('../img/praying-man.jpg');
  background-position: bottom;
  background-size: cover;
}
#hand-content {
  margin-left: 15px;
  padding: 1em;
}
#empty-block {
  width: 400px;
  height: 200px;
  float: right;
}
#blue {
  background-color: #a6dffc;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 10px;
}
#why {
  font-size: 32px;
  width: 60%;
  margin: auto;
}
#spoon-1 {
  position: relative;
  left: 57px;
  z-index: -1;
}
#spoon-2 {
  position: relative;
  z-index: -1;
}
#green-box {
  width: 100%;
  height: 210px;
  position: relative;
  top: 65px;
  z-index: -2;
  background-color: #99e5ae;
}
#dougnut {
  margin-top: -2em;
  margin-right: -2em;
  float: right;
  width: 300px;
}
#infinite {
  position: relative;
  top: 0;
  width: 100%;
  z-index: -1;
}
#green-bg-3 {
  position: absolute;
  top: 0px;
  left: 1px;
  width: 100%;
  height: 179px;
  z-index: 1;
  background: rgba(0, 0, 0, .7);
}
#choice1 img{
  width: 500px;
}
#choice2 {
  position: relative;
  top: -17px;
  left: 517px;
}
#choice2 img{
  width: 500px;
}
#or {
  width: 100px;
}
/*#woman-celebrating {
  float: left;
}*/
@media screen and (max-width: 700px) {
  #spoon-1 {
    display: none
  }
  #spoon-2 {
    display: none;
  }
}
@media screen and (max-width: 500px) {
  body {
    width: 100%;
    max-width: 500px;
    margin: auto;
  }
  img {
    width: 100%;
    height: 100%;
  }
  ul {
    width: 96%;
    padding: 1em;
    margin: 0;
  }
  .style1-box {
    -webkit-flex-direction: column;
  }
  .style1-box img {
    width: 100%;
  }
  .style1-box-content {
    width: 100%;
    max-width: 350px;
    margin: 10px auto;
  }
  .heart-content {
    width: 100%;
    margin: 0;
  }
  .frustrated-man {
    height: 100%;
  }
  .frustrated-man-content {
    width: 100%;
    float: none;
    margin: 0;
  }
  .choices {
    flex-direction: column;
  }
  .praying-man-container {
    flex-direction: column;
  }
  .praying-man-content {
    width: 100%;
    max-width: none;
    margin: 0;
  }
  .woman-celebrating-1 {
    width: 100%;
  }
  .woman-yelling {
    flex-direction: column;
  }
  .man-content {
    width: 100%;
  }
  .man-surprised {
    flex-direction: column;
  }
  .boss-man-container {
    flex-direction: column;
  }
  .boss-man-content {
    width: 100%;
    max-width: none;
    border-radius: 0px;
    height: 100%;
    font-size: 1em;
    margin: 0;
  }
  .boss-man-container img {
    width: 100%;
    height: 100%;
  }
  .green-bg-3 {
    height: 100%;
  }
  .girl-thinking-container {
    height: 100%;
  }
  #praying-man {
    width: 100%;
    max-width: none;
  }
  #crying-woman {
    width: 100%;
  }
  #empty-block {
    display: none;
  }
  #blue {
    flex-direction: column;
  }
  #why {
    width: 100%;
  }
  #dougnut {
    width: 50%;
  }
  #choice1 img{

    width: 100%;
  }
  #choice2 {
    position: static;
  }
  #choice2 img{
    width: 100%;
  }
  #or {
    width: 60px;
  }
}

